fixed events overflow bug

--- a/src/styles/partials/_events.scss
+++ b/src/styles/partials/_events.scss
@@ -46,12 +46,11 @@ nav.list__navigation {
   padding: 30px 120px;
 }
 
-aside header.events__filters {
-  background-color: transparent;
-  padding: 0;
+aside.filter__events {
+  margin-bottom: 0;
 }
 
-.events__filters {
+div.events__filters {
   
   padding: 40px 40px 30px;
 
